Update README.md and README.rx
Prior to this commit the README.md and associated README.rx needed a
final edit. Following this commit the README.md is ready for final
review, but the README.rx is failing validation of the README.md for
unknown reasons.

--- a/README.rx
+++ b/README.rx
@@ -13,23 +13,26 @@
 -??-
 
 * -??-
-* [-!!-](-!!-)
-* -??-
+* [-!!-](-!!-) -??-
 * -""-
 
 ### Building
 
 -!!-<!-- Short Explanation -->
 
-```-??-
-```
+* -!!-<!-- Build Step Explanation -->
+  ```-??-
+  ```
+* -""-
 
 ### Installation
 
 -!!-<!-- Short Explanation -->
 
-```-??-
-```
+* -!!-<!-- Installation Step Explanation -->
+  ```-??-
+  ```
+* -""-
 
 ## Usage
 
